# ttt

./: .gitignore  Cargo.toml  package-lock.json  package.json  todo.txt
doc/: design.md  todo.txt
migrations/2022-08-31-185510_init/: down.sql  up.sql
migrations/2022-10-05-193154_tagging_support/: down.sql  up.sql
src/: database.rs  error.rs  lib.rs  main.rs  model.rs  schema.rs  timespan_parser.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  database.rs  error.rs  gui.rs  main.rs  model.rs  timespan_parser.rs
src/lib/: CurrentFrame.svelte  FrameControl.svelte
src/routes/: +page.svelte
