[package]
name = "ttt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.17", features = ["derive"] }
diesel = { version = "2.0.0", features = ["chrono", "sqlite", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15.3"
inquire = { version = "0.3.0", features = ["date"] }
