[package]
name = "ttt"
version = "0.5.0"
edition = "2021"
authors = ["texel <texelsensei@posteo.net>", "JohnDoe1112 <johndoe11@posteo.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
diesel = { version = "2.0.0", features = ["chrono", "sqlite", "serde_json", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
directories = "4.0.1"
dotenvy = "0.15.3"
inquire = { version = "0.3.0", features = ["date"] }
itertools = "0.10.5"
